public/stylesheets/app-layout.css
.main-content {
  background-color: #eddaf4;
  height: 100%;
  width: 100%;
  position: absolute;
  padding-top: 54px;

  display: grid;
  grid-template-columns: 200px 1fr 1fr;
  grid-template-rows: 100%;

  overflow: hidden;
}

.list-menu {
  height: 100%;
  grid-column: 1 / 2;
  grid-row: 1 / 2;
  padding-top: 20px;
  padding-left: 10px;
  padding-right: 10px;
}

.task-list {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  background-color: white;
  margin-top: 10px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  z-index: 1;
  /* overflow: hidden; */
}

.summary {
  grid-column: 3 / 4;
  grid-row: 1 / 2;
  background-color: rgba(255, 255, 255, 0.4);
  margin: 10px 10px 10px -5px;
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
  position: relative;
}

.details {
  /* visibility: hidden; */
  grid-column: 3 / 4;
  grid-row: 1 / 2;
  background-color: white;
  margin-top: 10px;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-left: 2px solid lightgrey;
  transform: translateX(110%);
  transition: 1s;
  transition-timing-function: ease-in-out;
}

.details--shown {
  margin-left: 5px;
  margin-right: 5px;
  transform: translateX(0%);
  transition: 1s;
  transition-timing-function: ease-in-out;
}

.search-results-container {
  visibility: hidden;
  z-index: 10;
  width: 100%;
  height: 100%;
  position: absolute;

  background-color: rgba(0, 0, 0, 0.6);

  display: flex;
  justify-content: center;
  align-items: center;

  /* animation: fade-out .3s; */
}

.search-results-container--shown {
  visibility: visible;
  animation: fade-in 0.3s;
  cursor: pointer;
}

@keyframes fade-in {
  0% {
    visibility: visible;
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }

  99% {
    opacity: 0;
    visibility: visible;
  }

  100% {
    visibility: hidden;
    opacity: 0;
  }
}

.search-results {
  width: 80%;
  max-width: 800px;
  height: 80%;
  position: relative;

  margin: auto;

  background-color: whitesmoke;

  border-radius: 10px;
  padding: 20px;
}

.search-results > h1 {
  margin: 10px;
}

.fas.fa-sign-out-alt {
  visibility: visible;
  animation: fade-in 0.3s;
  cursor: pointer;
}

@media screen and (max-width: 1000px) {
  .summary {
    visibility: hidden;
  }

  .task-list {
    grid-column: 2 / span 2;
    grid-row: 1 / 2;
    background-color: white;
    margin-top: 10px;
    margin-right: 15px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
  }

  .details {
    grid-column: 2 / span 2;
    margin-right: 15px;
    padding-right: 10px;
  }

}

